[workspace]
members = [
    "ark-cli",
    "data-error",
    "data-json",
    "data-link",
    "data-pdf",
    "data-resource",
    "fs-atomic-versions",
    "fs-atomic-light",
    "fs-index",
    "fs-storage",
]

default-members = [
    "ark-cli",
    "data-error",
    "data-json",
    "data-link",
    "data-pdf",
    "data-resource",
    "fs-atomic-versions",
    "fs-index",
    "fs-storage",
]

resolver = "2"
